# PHC

./: .dockerignore  Dockerfile  Dockerfile-multistage  Dockerfile-simple  README.md  docker-compose-external-ollama.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-dockerhub.yml
data/: health_data.db
src/: Home.py  auth.py  database.py  llm.py  requirements.txt
src/pages/: 1_💬_Assistant.py  2_🏃_Running.py
