[project]
name = "phc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-search-results==2.4.2",
    "langchain==0.0.329",
    "langchain-experimental==0.0.42",
    "lxml==4.9.3",
    "matplotlib==3.8.0",
    "numpy==1.25.2",
    "openai==0.28.0",
    "pandas==2.1.0",
    "pillow==9.5.0",
    "python-dotenv==1.0.0",
    "streamlit==1.26.0",
    "tabulate==0.9.0",
    "watchdog==3.0.0",
]
